typewriter effect fix & scrollbar remove

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,17 @@
 @tailwind components;
 @tailwind utilities;
  
+/* styles/globals.css */
+::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+
+/* Optionally, you can also hide scrollbar in Firefox */
+body {
+  scrollbar-width: none; /* Firefox */
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
